[gd_scene load_steps=24 format=3 uid="uid://csactdoegtrlj"]

[ext_resource type="Script" path="res://scenes/player_ship/ship.gd" id="1_282g2"]
[ext_resource type="Texture2D" uid="uid://bslwnjt77usv1" path="res://assets/ship.png" id="1_b2fxu"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_2am7w"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="2_ipc1d"]
[ext_resource type="Script" path="res://components/move_input_component.gd" id="3_kuqsd"]
[ext_resource type="Resource" uid="uid://b35d1mstoikbb" path="res://scenes/player_ship/ship_move_stats.tres" id="4_j8jhp"]
[ext_resource type="Script" path="res://components/position_clamp_component.gd" id="5_yfeb8"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="7_rjwr5"]
[ext_resource type="PackedScene" uid="uid://0x2114wmv0eu" path="res://scenes/projectiles/laser.tscn" id="8_71udc"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="9_my3bu"]
[ext_resource type="Texture2D" uid="uid://s8sa8l5yblb6" path="res://assets/ship_flame.png" id="10_dtcno"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="11_wthhr"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="13_3rhnb"]
[ext_resource type="PackedScene" uid="uid://d2nruq0y5ufjy" path="res://effects/explosion_effect.tscn" id="14_4p7ms"]
[ext_resource type="Script" path="res://components/pickup_item_component.gd" id="14_6qudk"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="15_a61gw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gwgmt"]
atlas = ExtResource("10_dtcno")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uq2g"]
atlas = ExtResource("10_dtcno")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_fux71"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwgmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uq2g")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6cse5"]
atlas = ExtResource("1_b2fxu")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_etlbh"]
atlas = ExtResource("1_b2fxu")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxjlk"]
atlas = ExtResource("1_b2fxu")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_um28i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cse5")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_etlbh")
}],
"loop": true,
"name": &"turn_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxjlk")
}],
"loop": true,
"name": &"turn_right",
"speed": 5.0
}]

[node name="Ship" type="Node2D"]
script = ExtResource("1_282g2")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("2_ipc1d")
health = 5.0

[node name="Anchor" type="Node2D" parent="."]

[node name="FlameAnimatedSprite" type="AnimatedSprite2D" parent="Anchor"]
position = Vector2(0, 16)
sprite_frames = SubResource("SpriteFrames_fux71")
autoplay = "default"
frame_progress = 0.872179

[node name="ShipAnimatedSprite" type="AnimatedSprite2D" parent="Anchor"]
sprite_frames = SubResource("SpriteFrames_um28i")
animation = &"center"
autoplay = "center"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_2am7w")
actor = NodePath("..")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("3_kuqsd")
move_component = NodePath("../MoveComponent")
move_stats = ExtResource("4_j8jhp")

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_yfeb8")
actor = NodePath("..")

[node name="LaserSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_rjwr5")
scene = ExtResource("8_71udc")

[node name="LeftCannon" type="Marker2D" parent="."]
position = Vector2(-5, -4)

[node name="RightCannon" type="Marker2D" parent="."]
position = Vector2(5, -4)

[node name="CannonTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_my3bu")
sprite = NodePath("../Anchor")
scale_amount = Vector2(1.2, 1.2)
scale_duration = 0.25

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_mask = 0
script = ExtResource("11_wthhr")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtboxComponent"]
polygon = PackedVector2Array(-5, 7, 5, 7, 5, 4, 8, 4, 8, 2, 6, 0, 3, -1, 3, -4, 1, -6, -1, -6, -3, -4, -3, -1, -6, 0, -8, 2, -8, 4, -5, 4)

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("13_3rhnb")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="PickupItemComponent" type="Area2D" parent="." node_paths=PackedStringArray("ship", "stats_component")]
collision_layer = 0
collision_mask = 4
script = ExtResource("14_6qudk")
ship = NodePath("..")
stats_component = NodePath("../StatsComponent")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PickupItemComponent"]
polygon = PackedVector2Array(-5, 7, 5, 7, 5, 4, 8, 4, 8, 2, 6, 0, 3, -1, 3, -4, 1, -6, -1, -6, -3, -4, -3, -1, -6, 0, -8, 2, -8, 4, -5, 4)

[node name="ExplosionSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_rjwr5")
scene = ExtResource("14_4p7ms")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("15_a61gw")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../ExplosionSpawnerComponent")

[connection signal="timeout" from="CannonTimer" to="." method="_on_cannon_timer_timeout"]
